Add in heart as an explicit dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@
 
 # You can set which Chaste components (or other projects) your project depends on by editing the
 # find_package() call for Chaste.  E.g.
-find_package(Chaste COMPONENTS project_ApPredict)
+find_package(Chaste COMPONENTS heart project_ApPredict)
 
 # Change the project name in the line below to match the folder this file is in,
 # i.e. the name of your project.
